Bug 779118 - Try to be more robust about waiting for compression to finish. r=luke